# CrazyEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: ESL.md
include/crazyengine/: engine.h  esl.h  physics.h
include/glad/: glad.h
shaders/: basic.esl  basic.frag  basic.vert  blinn_phong.esl  cook_torrance.esl
src/: engine.cpp  esl.cpp  glad.c  main.cpp  physics.cpp
tests/: esl_bench.cpp  esl_cookbook_test.cpp  physics_test.cpp
